0chain_setup/Load_balancer/nginx/0chain-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: expose-chain-comp
  namespace:  test
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - test.devnet-0chain.net
    secretName: test-com-kubernetes-tls-01
  rules:
  - host: test.devnet-0chain.net
    http:
      paths:

      - path: /sharder01/(|$)(.*)
        backend:
          serviceName: sharder-01
          servicePort: 31101

      - path: /miner01/(|$)(.*)
        backend:
          serviceName: miner-01
          servicePort: 31201

      - path: /blobber01/(|$)(.*)
        backend:
          serviceName: blobber-01
          servicePort: 31301

      - path: /validator01/(|$)(.*)
        backend:
          serviceName: validator-01
          servicePort: 31401
